# nostr-ci

./: Cargo.toml  README.md  flake.nix  justfile
nix/: module.nix
src/: config.rs  container.rs  http.rs  jobs.rs  listener.rs  loom.rs  main.rs  payments.rs  state.rs
src/github/: client.rs  mod.rs  types.rs
