[package]
name = "runner-controller"
version = "0.1.0"
edition = "2021"
description = "GitHub Actions Runner Controller for NixOS containers"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"

# State persistence
redb = "2"

# HTTP API
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tokio-test = "0.4"
# wiremock = "0.6"  # TODO: Add back when integration tests are needed

[profile.release]
lto = true
strip = true
