[package]
name = "runner-controller"
version = "0.1.0"
edition = "2021"
description = "Loom worker advertisement controller for NixOS containers"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
nostr = { version = "0.44", features = ["nip04", "nip44"] }
nostr-sdk = "0.44"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# State persistence
redb = "2"

# HTTP API
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
# wiremock = "0.6"  # TODO: Add back when integration tests are needed

[profile.release]
lto = true
strip = true
